--- a/frontend/src/assets/styles/HeaderStyle.css
+++ b/frontend/src/assets/styles/HeaderStyle.css
@@ -1,52 +1,13 @@
+/* Font importok */
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rasa:ital,wght@0,300..700;1,300..700&family=Tourney:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  .logo {
-    width: 100px;
-    height: 100px;
-  }
-  .logo-text {
-    font-size: 10px;
-  }
-  .temutricks,.carsharingtips,.errorfares,.aboutus,.whoweare,.support {
-    font-size: 16px;
-    text-wrap: nowrap;
-  }
-}
-@media (min-width: 768px) and (max-width: 1280px) {
-  .nav-item {
-    margin: 0.5rem 0;
-  }
-
-  ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:center;
-    align-items: center;
-    gap: 1rem;
-  }
-
-  .nav-link,
-  .nav-link-subtle,
-  .action-button {
-    white-space: nowrap;
-    padding: 0.5rem 1rem;
-  }
-}
-
-/* Mobilnézet */
-@media (max-width: 767px) {
-  .nav-item {
-    width: 100%;
-    text-align: center;
-    padding: 0.5rem 0;
-  }
-}
+/* Alapstílusok */
 .logo-text {
   font-family: "Tourney", "Montserrat", Arial, Helvetica, sans-serif;
 }
+
 .nav-item {
   @apply block py-2;
 }
@@ -97,12 +58,7 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background: linear-gradient(
-    90deg,
-    transparent,
-    rgba(255, 255, 255, 0.4),
-    transparent
-  );
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
   transform: translateX(-100%);
   transition: transform 0.8s ease-out;
 }
@@ -114,7 +70,47 @@
 }
 
 /* Reszponzív beállítások */
-@media (max-width: 768px) {
+@media (min-width: 768px) and (max-width: 1024px) {
+  .logo {
+    width: 100px;
+    height: 100px;
+  }
+  
+  .logo-text {
+    font-size: 10px;
+  }
+  
+  .temutricks,
+  .carsharingtips,
+  .errorfares,
+  .aboutus,
+  .whoweare,
+  .support {
+    font-size: 16px;
+    text-wrap: nowrap;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1280px) {
+  .nav-item {
+    margin: 0.5rem 0;
+  }
+  
+  .nav-link,
+  .nav-link-subtle,
+  .action-button {
+    white-space: nowrap;
+    padding: 0.5rem 1rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .nav-item {
+    width: 100%;
+    text-align: center;
+    padding: 0.5rem 0;
+  }
+  
   .nav-item-group {
     @apply flex flex-col space-y-2;
   }
